implement survey components + error messages, and debug validation

--- a/AttendanceSystem/Components/Layout/MainLayout.razor
+++ b/AttendanceSystem/Components/Layout/MainLayout.razor
@@ -1,5 +1,13 @@
 ﻿@inherits LayoutComponentBase
 
+<div class="nav-links">
+    <NavLink href="/" Match="NavLinkMatch.All">Survey</NavLink>
+    |
+    <NavLink href="/home">Submission page</NavLink>
+    |
+    <NavLink href="/weather"></NavLink>
+</div>
+
 <div class="main">
     @Body
 </div>
