--- a/AttendanceSystem/Components/App.razor
+++ b/AttendanceSystem/Components/App.razor
@@ -1,16 +1,17 @@
-﻿<!DOCTYPE html>
+﻿@namespace AttendanceSystem.Components
+
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <base href="/" />
-    <link rel="stylesheet" href="@Assets["lib/bootstrap/dist/css/bootstrap.min.css"]" />
-    <link rel="stylesheet" href="@Assets["app.css"]" />
-    <link rel="stylesheet" href="@Assets["AttendanceSystem.styles.css"]" />
-    <ImportMap />
+    <HeadOutlet @rendermode="InteractiveServer" />
+    <link rel="stylesheet" href="css/app.css" />
+    <link rel="stylesheet" href="css/bootstrap.min.css" />
+    <script src="js/bootstrap.bundle.min.js"></script>
     <link rel="icon" type="image/png" href="favicon.png" />
-    <HeadOutlet />
 </head>
 
 <body>
