--- a/AttendanceSystem/Components/Pages/Home.razor
+++ b/AttendanceSystem/Components/Pages/Home.razor
@@ -1,7 +1,13 @@
-﻿@page "/"
+﻿@page "/home"
+
+@using AttendanceSystem.Components
 
 <PageTitle>Home</PageTitle>
 
 <h1>Hello, world!</h1>
 
+Attendance submitted.
+=======
 Welcome to your new app.
+
+<FileUpload/>
