--- a/ProfessorApp/Views/StudentManagement.xaml
+++ b/ProfessorApp/Views/StudentManagement.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              x:Class="ProfessorApp.Pages.UploadPage"
-             Title="Upload Student List">
+             Title="Student Management">
 
     <VerticalStackLayout Padding="20" Spacing="10">
 
