Added button for submitting files and added file verification so only files with the expected header can be uploaded

--- a/ProfessorApp/Views/StudentManagement.xaml
+++ b/ProfessorApp/Views/StudentManagement.xaml
@@ -31,6 +31,14 @@
                 Text="No files selected."
                 TextColor="White" />
 
+            <Button
+                BackgroundColor="Orange"
+                Clicked="OnSubmitFilesClicked"
+                Text="Submit"
+                TextColor="White"
+                WidthRequest="100" />
+
+
             <!--  Button to trigger Add Student Form  -->
             <Button
                 Margin="0,30,0,30"
