Fix issue with course api not working and fix warnings

--- a/AttendanceSystem/Components/Pages/Survey.razor
+++ b/AttendanceSystem/Components/Pages/Survey.razor
@@ -120,7 +120,7 @@
 
 @code {
 
-    private EditForm editForm;
+    private EditForm? editForm;
 
     private FormData formData = new FormData(){
         StudentID = string.Empty,
@@ -152,9 +152,9 @@
     {  
         [Required(ErrorMessage = "Student ID is required.")]
         [RegularExpression(@"^\d{1,25}$", ErrorMessage = "Only numbers allowed, max 25 characters.")]
-        public string StudentID { get; set; }
+        public string? StudentID { get; set; }
         
         [Required(ErrorMessage = "Please select an answer.")]
-        public string Answer { get; set; }
+        public string? Answer { get; set; }
     }
 }
