Added functions to home page to go to StudentManagement and Attendance Pages through the click of buttons

--- a/ProfessorApp/Views/HomePage.xaml
+++ b/ProfessorApp/Views/HomePage.xaml
@@ -35,6 +35,12 @@
                 Text="Student Management"
                 TextColor="White" />
 
+            <Button
+                BackgroundColor="Orange"
+                Clicked="GoToAttPage"
+                Text="Attendance"
+                TextColor="White" />
+
 
         </VerticalStackLayout>
     </Grid>
