Added a button for a courses page that has a button that takes to student management for each course

--- a/ProfessorApp/AppShell.xaml
+++ b/ProfessorApp/AppShell.xaml
@@ -21,6 +21,11 @@
         Route="StudentManagement" />
 
     <ShellContent
+        Title="Student Management"
+        ContentTemplate="{DataTemplate pages:CoursePage}"
+        Route="StudentManagement" />
+
+    <ShellContent
         Title="Home"
         ContentTemplate="{DataTemplate local:MainPage}"
         Route="MainPage" />
