--- a/ProfessorApp/Views/CoursePage.xaml
+++ b/ProfessorApp/Views/CoursePage.xaml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage
-    x:Class="ProfessorApp.Pages.HomePage"
+    x:Class="ProfessorApp.Pages.CoursePage"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     BackgroundColor="Black">
@@ -15,31 +15,18 @@
                 FontAttributes="Bold"
                 FontSize="24"
                 HorizontalOptions="Center"
-                Text="Home Page"
-                TextColor="White"
-                VerticalOptions="Start" />
-
-            <Label
-                Margin="0,20,0,10"
-                FontAttributes="Bold"
-                FontSize="24"
-                HorizontalOptions="Center"
-                Text="Welcome Professor...."
+                Text="Courses"
                 TextColor="White"
                 VerticalOptions="Start" />
 
             <!--  Button to Choose Files  -->
             <Button
                 BackgroundColor="Orange"
-                Clicked="GoToCoursePage"
-                Text="Courses"
+                Clicked="GoToC1Page"
+                Text="Course1"
                 TextColor="White" />
 
-            <Button
-                BackgroundColor="Orange"
-                Clicked="GoToAttPage"
-                Text="Attendance"
-                TextColor="White" />
+
 
 
         </VerticalStackLayout>
