--- a/AttendanceSystem/Components/Pages/Survey.razor
+++ b/AttendanceSystem/Components/Pages/Survey.razor
@@ -235,6 +235,7 @@
             bool confirmed = await JSRuntime.InvokeAsync<bool>("confirm", "Are you sure you want to submit?");
             if (confirmed)
             {
+                <!-- Diego: Added error message to detect in input matches an ID in the databse when submitted-->
                 var student = await StudentService.GetStudentByUTDIdAsync(formData.StudentID);
                 if (student == null)
                 {
